--- a/app.json
+++ b/app.json
@@ -17,17 +17,17 @@
         "SUPPORT": {
             "description": "Fill there your group username else leave",
             "required": false,
-            "value": "TheSupportChat"
+            "value": "ygabutkan"
         },
         "CHANNEL": {
             "description": "Fill there your Channel username else leave",
             "required": false,
-            "value": "TheUpdatesChannel"
+            "value": "ygabutkan"
         },
         "BOT_USERNAME": {
             "description": "Fill there your bot username",
             "required": false,
-            "value": "Zaid2_Robot"
+            "value": "elieverobot"
         },
         "BOT_TOKEN": {
             "description": "fill with your bot token get from @BotFather on telegram",
